Alteração no nome e slogan

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechReads - Dicas de Livros e Influenciadores Tech</title>
+    <title>BiblioTech - Tecnologia que Inova, Ideias que Transformam</title>
     <meta name="description" content="Descubra os melhores livros e influenciadores da área de tecnologia" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,7 +54,7 @@
             <div class="flex items-center">
               <a href="#" class="flex items-center">
                 <span class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-pink-500 bg-clip-text text-transparent">
-                  TechReads
+                  BiblioTech
                 </span>
               </a>
             </div>
@@ -337,10 +337,10 @@
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div>
               <h3 class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-pink-500 bg-clip-text text-transparent">
-                TechReads
+                BiblioTech
               </h3>
               <p class="mt-4 text-gray-300">
-                Sua fonte definitiva para descobrir conteúdo de qualidade na área de tecnologia.
+                Tecnologia que Inova, Ideias que Transformam.
               </p>
               <div class="mt-6 flex space-x-4">
                 <a href="#" class="text-gray-400 hover:text-white transition-colors">
@@ -349,7 +349,7 @@
                     <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
                   </svg>
                 </a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors">
+                <a href="https://github.com/jamilsalomao/" class="text-gray-400 hover:text-white transition-colors">
                   <span class="sr-only">GitHub</span>
                   <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path
@@ -389,11 +389,6 @@
                     Influenciadores
                   </a>
                 </li>
-                <li>
-                  <a href="#footer" class="text-gray-300 hover:text-white transition-colors">
-                    Sobre
-                  </a>
-                </li>
               </ul>
             </div>
             <div>
@@ -420,7 +415,7 @@
           </div>
           <div class="mt-8 pt-8 border-t border-gray-700">
             <p class="text-gray-400 text-center">
-              &copy; <span id="current-year"></span> TechReads. Todos os direitos reservados.
+              &copy; <span id="current-year"></span> BiblioTech. Todos os direitos reservados.
             </p>
           </div>
         </div>
