--- a/index.html
+++ b/index.html
@@ -423,10 +423,10 @@
     </section>
     </div>
 
-    <script type="module" src="../src/data/booksData.js"></script>
-    <script type="module" src="../src/data/statsdata.js"></script>
-    <script type="module" src="../src/data/influencersData.js"></script>
-    <script type="module" src="../src/utils/toggletheme.js"></script>
-    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="/src/data/booksData.js"></script>
+    <script type="module" src="/src/data/statsdata.js"></script>
+    <script type="module" src="/src/data/influencersData.js"></script>
+    <script type="module" src="/src/utils/toggletheme.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
