--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
     </section>
     </div>
 
+    <script src="/src/data/statsdata.js"></script>
     <script type="module" src="/src/data/booksData.js"></script>
-    <script type="module" src="/src/data/statsdata.js"></script>
     <script type="module" src="/src/data/influencersData.js"></script>
     <script type="module" src="/src/utils/toggletheme.js"></script>
     <script type="module" src="/src/main.js"></script>
