Alteração no mobile menu

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               Influenciadores
             </a>
             <a
-              href="#about"
+              href="#footer"
               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700"
             >
               Sobre
