--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
             <div id="books-grid" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
               <!-- Books will be inserted here by JavaScript -->
             </div>
+            <div id="books-loading-spinner" class="hidden flex justify-center items-center py-8">
+              <div class="animate-spin rounded-full h-12 w-12 border-4 border-purple-500 border-t-transparent"></div>
+              <p class="ml-4 text-gray-600 dark:text-gray-300">Carregando livros...</p>
+          </div>
           </div>
         </div>
     
@@ -326,7 +330,11 @@
             <div id="influencers-grid" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
               <!-- Influencers will be inserted here by JavaScript -->
             </div>
-          </div>
+            <div id="influencers-loading-spinner" class="hidden flex justify-center items-center py-8">
+              <div class="animate-spin rounded-full h-12 w-12 border-4 border-pink-500 border-t-transparent"></div>
+              <p class="ml-4 text-gray-600 dark:text-gray-300">Carregando influenciadores...</p>
+            </div>
+            </div>
         </div>
       </section>
 
@@ -423,7 +431,7 @@
     </section>
     </div>
 
-    <script src="/src/data/statsdata.js"></script>
+    <script type="module" src="/src/data/statsdata.js"></script>
     <script type="module" src="/src/data/booksData.js"></script>
     <script type="module" src="/src/data/influencersData.js"></script>
     <script type="module" src="/src/utils/toggletheme.js"></script>
