--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BiblioTech - Tecnologia que Inova, Ideias que Transformam</title>
     <meta name="description" content="Descubra os melhores livros e influenciadores da área de tecnologia" />
-    <link rel="shortcut icon" type="imagex/png" href="/public/Iconsite.png">
+    <link rel="shortcut icon" type="imagex/png" href="/Iconsite.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
