--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="flex justify-between h-16 items-center">
             <div class="flex items-center">
               <a href="#" class="flex items-center">
-                <span class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-pink-500 bg-clip-text text-transparent">
+                <span class="text-2xl font-bold bg-gradient-to-r from-green-600 to-green-400 bg-clip-text text-transparent">
                   BiblioTech
                 </span>
               </a>
@@ -29,19 +29,19 @@
             <div class="hidden md:flex items-center space-x-8">
               <a
                 href="#books"
-                class="text-gray-700 dark:text-gray-200 hover:text-purple-600 dark:hover:text-purple-400 transition-colors"
+                class="text-gray-700 dark:text-gray-200 hover:text-green-600 dark:hover:text-green-400 transition-colors"
               >
                 Livros
               </a>
               <a
                 href="#influencers"
-                class="text-gray-700 dark:text-gray-200 hover:text-purple-600 dark:hover:text-purple-400 transition-colors"
+                class="text-gray-700 dark:text-gray-200 hover:text-green-600 dark:hover:text-green-400 transition-colors"
               >
                 Influenciadores
               </a>
               <a
                 href="#footer"
-                class="text-gray-700 dark:text-gray-200 hover:text-purple-600 dark:hover:text-purple-400 transition-colors"
+                class="text-gray-700 dark:text-gray-200 hover:text-green-600 dark:hover:text-green-400 transition-colors"
               >
                 Sobre
               </a>
@@ -177,17 +177,17 @@
 
       <!-- Hero Section -->
       <div class="relative overflow-hidden">
-        <div class="absolute inset-0 bg-gradient-to-br from-purple-100 to-pink-100 dark:from-purple-900/30 dark:to-pink-900/30 transform -skew-y-6 -translate-y-24 z-0"></div>
+        <div class="absolute inset-0 bg-gradient-to-br from-green-300 to-green-100 dark:from-green-900/30 dark:to-green-500/50 transform -skew-y-6 -translate-y-24 z-0"></div>
     
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-32 pb-16 relative z-10">
           <div class="text-center">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white sm:text-5xl md:text-6xl">
               <span class="block">Descubra os melhores</span>
-              <span class="block bg-gradient-to-r from-purple-600 to-pink-500 bg-clip-text text-transparent">
+              <span class="block bg-gradient-to-r from-green-600 to-green-400 bg-clip-text text-transparent">
                 livros e influenciadores tech
               </span>
             </h1>
-            <p class="mt-3 max-w-md mx-auto text-base text-gray-500 dark:text-gray-300 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
+            <p class="mt-3 max-w-md mx-auto text-base text-gray-600 dark:text-gray-300 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
               Sua fonte definitiva para descobrir conteúdo de qualidade na área de tecnologia. Encontre recomendações de
               livros e conheça os influenciadores que estão moldando o futuro.
             </p>
@@ -195,7 +195,7 @@
               <div class="rounded-md shadow">
                 <a
                   href="#books"
-                  class="w-full flex items-center justify-center px-8 py-3 text-base font-medium rounded-md text-white bg-gradient-to-r from-purple-600 to-pink-500 hover:from-purple-700 hover:to-pink-600 md:py-4 md:text-lg md:px-10 transition-all duration-300 transform hover:scale-105"
+                  class="w-full flex items-center justify-center px-8 py-3 text-base font-medium rounded-md text-white bg-gradient-to-r from-green-600 to-green-400 hover:from-green-700 hover:to-green-500 md:py-4 md:text-lg md:px-10 transition-all duration-300 transform hover:scale-105"
                 >
                   Explorar livros
                 </a>
@@ -203,7 +203,7 @@
               <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
                 <a
                   href="#influencers"
-                  class="w-full flex items-center justify-center px-8 py-3 text-base font-medium rounded-md text-white bg-gradient-to-r from-purple-600 to-pink-500 hover:from-purple-700 hover:to-pink-600 md:py-4 md:text-lg md:px-10 transition-all duration-300 transform hover:scale-105"
+                  class="w-full flex items-center justify-center px-8 py-3 text-base font-medium rounded-md text-white bg-gradient-to-r from-green-600 to-green-400 hover:from-green-700 hover:to-green-500 md:py-4 md:text-lg md:px-10 transition-all duration-300 transform hover:scale-105"
                 >
                   Ver influenciadores
                 </a>
@@ -303,7 +303,7 @@
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div>
-              <h3 class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-pink-500 bg-clip-text text-transparent">
+              <h3 class="text-2xl font-bold bg-gradient-to-r from-green-600 to-green-400 bg-clip-text text-transparent">
                 BiblioTech
               </h3>
               <p class="mt-4 text-gray-300">
@@ -368,11 +368,11 @@
                   <input
                     type="email"
                     placeholder="Seu e-mail"
-                    class="w-full px-4 py-2 rounded-l-md text-gray-900 focus:outline-none focus:ring-2 focus:ring-purple-500"
+                    class="w-full px-4 py-2 rounded-l-md text-gray-900 focus:outline-none focus:ring-2 focus:ring-green-500"
                   />
                   <button
                     type="submit"
-                    class="px-4 py-2 rounded-r-md bg-purple-600 text-white font-medium hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2"
+                    class="px-4 py-2 rounded-r-md bg-green-600 text-white font-medium hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2"
                   >
                     Inscrever
                   </button>
